@@ -33,6 +33,7 @@ import org.meandre.webservices.servlets.WSAboutServlet;
 import org.meandre.webservices.servlets.WSAuxiliarServlet;
 import org.meandre.webservices.servlets.WSCoordinatorServlet;
 import org.meandre.webservices.servlets.WSExecuteServlet;
+import org.meandre.webservices.servlets.WSJobServlet;
 import org.meandre.webservices.servlets.WSLocationsServlet;
 import org.meandre.webservices.servlets.WSPublicServlet;
 import org.meandre.webservices.servlets.WSPublishServlet;
@@ -333,6 +334,7 @@ public class MeandreServer {
 		contextWS.addServlet(new ServletHolder((Servlet) new WSPublishServlet(store,cnf)),		"/services/publish/*");
 		contextWS.addServlet(new ServletHolder((Servlet) new WSSecurityServlet(store,cnf)),		"/services/security/*");
 		contextWS.addServlet(new ServletHolder((Servlet) new WSCoordinatorServlet(store,cnf,baToStore)),		"/services/coordinator/*");
+		contextWS.addServlet(new ServletHolder((Servlet) new WSJobServlet(store,cnf)),		"/services/jobs/*");
 
 		contextWS.addServlet(new ServletHolder((Servlet) new WSAuxiliarServlet(store,cnf)),     "/services/auxiliar/*");
 		
